Changement du titre

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- L'en-tête à son propre felx -->
     <header class="flex">
         <hgroup class="zone70">
-            <h1>François Espagnet</h1>
+            <h1><span>François </span> Espagnet</h1>
             <h2>Infographiste Webdesigner</h2>
         </hgroup>
         <div class="zone30">
